# videooutput-adaptation-layer-mock

./: CMakeLists.txt  README.md  clang-format.sh
files/pkgconfig/: val-impl.pc.in
src/: logging.h
src/val/: val_impl.cpp  val_impl.h  val_settings_impl.cpp  val_settings_impl.h  val_video_impl.cpp  val_video_impl.h
